--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Create a web site by Ayush</title>
-    <link rel="stylesheet" href="practice2.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="main-container">
